--- a/find area_city_state_basedon_postoffice_with_pinocde.ipynb
+++ b/find area_city_state_basedon_postoffice_with_pinocde.ipynb
@@ -375,7 +375,7 @@
     "        lst_df = lst_df.append({'MasterId':str(masterid),'Area':\"\",'City':\"\",\"State\":\"\"}, ignore_index=True)\n",
     "        \n",
     "#print(lst_df) \n",
-    "lst_df.to_csv('/home/juned/PythonWork/Mapping/DATA/5.8 L retailer list (Cleaned)-AreaCityState-560000-565000.csv', header=True, index=False)"
+    "lst_df.to_csv('/home/juned/PythonWork/Mapping/DATA/Data for area finding-with-AreaCityState.csv', header=True, index=False)"
    ]
   }
  ],
